# Dailies-Rust-Transcoder

./: .gitignore  ARCHITECTURE.md  BUILD.md  Cargo.toml  DNXHR_GUIDE.md  EXAMPLES.md  FINAL_SOLUTION.md  GETTING_STARTED.md  GUI_QUICK_START.md  JOB_LOGGING_FEATURE.md  LICENSE  MXF_REWRAP_GUIDE.md  NEW_SIMPLE_GUI.md  NOTES_FOR_TOMORROW.md  OPTIMIZED_WORKFLOW.md  QUICK_START.md  README.md  README_TRANSCODER.md  RECOVERY_INSTRUCTIONS.md  RUN_BC_A012.md  SESSION_NOTES.md  SIMPLE_WORKFLOW.md  START_TRANSCODER.command  V2_INTEGRATION.md  XAVC_TO_AVID_PRESET.json  batch_transcode_parallel.sh  finish_BC_A012_avid.sh  index.html  package-lock.json  package.json  process_BC_A012.sh  process_BC_A012_quick.sh  transcode_fast_hw_accel.sh  transcode_menu.sh  transcode_to_avid_mov.sh  vite.config.ts
bwf-tools/: batch_correct_method.sh  frame_based_bext_calculator.py  insert_bext_timecode.py  test_bwf_timecode.py  test_frame_method.py
docs/: BEXT_TIMECODE_METHOD.md  MXF_INTEGRATION.md  QUICK_START_MXF.md
examples/: A012_car_batch.ts  A012_car_workflow.sh  README.md
mxf-tools/rust/: mxf.rs
mxf-tools/scripts/: unify_mob_id.sh
mxf-tools/typescript/: MxfMobIdTool.tsx  mxf-api.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  mxf_commands.rs  transcoder_commands.rs
src/api/: transcoder-api.ts
src/components/: AddJobDialog.tsx  JobList.tsx  MxfRewrapTool.tsx  SimpleTranscoder.tsx  TranscoderDashboard.tsx
tauri-integration/rust/: bwf.rs
tauri-integration/typescript/: BwfTimecodeCreator.tsx  bwf-api.ts
transcoder-cli/: Cargo.toml
transcoder-cli/src/: main.rs
transcoder-core/: Cargo.toml
transcoder-core/src/: ale.rs  config.rs  error.rs  job.rs  lib.rs  logger.rs  mxf.rs  platform.rs  progress.rs  queue.rs  transcode.rs  worker.rs
