[workspace]
members = ["transcoder-core", "transcoder-cli", "src-tauri"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Industrial Transcoder Team"]
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/industrial-transcoder-rust-v1"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system and paths
walkdir = "2.4"
path-absolutize = "3.1"

# Progress tracking
indicatif = "0.17"

# Cross-platform utilities
which = "5.0"
home = "0.5"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Channel communication
crossbeam-channel = "0.5"

# Platform detection
cfg-if = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

