[package]
name = "industrial-transcoder"
version = "2.0.0"
description = "Industrial multi-job transcoder for professional media workflows"
authors = ["Industrial Transcoder Team"]
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/industrial-transcoder-rust-v1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
transcoder-core = { path = "../transcoder-core" }

tauri = { version = "1.5", features = [ "dialog-save", "fs-exists", "dialog-open", "fs-write-file", "fs-read-dir", "fs-read-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

