[package]
name = "transcoder-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "transcoder"
path = "src/main.rs"

[dependencies]
transcoder-core = { path = "../transcoder-core" }

# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI dependencies
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"

