[package]
name = "transcoder-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
path-absolutize = { workspace = true }
indicatif = { workspace = true }
which = { workspace = true }
home = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
cfg-if = { workspace = true }

# Additional dependencies
rayon = "1.8"
dashmap = "5.5"
regex = "1.10"
num_cpus = "1.16"
sys-info = "0.9"

[dev-dependencies]
tempfile = "3.8"

